# terminal-copilot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
bash/: terminal-copilot.bash
benchmarks/: README.md  bench_cache.py  bench_http_predict.py  bench_ipc_socket.py  bench_predict_cli.py  bench_project_detector.py  bench_sqlite_history.py  bench_startup.py  bench_windows_pipe.py  common.py
config/: defaults.yaml  providers.yaml  rules.yaml
daemon/: ai_client.py  cache_store.py  config.py  context_detector.py  history_store.py  ipc.py  main.py  models.py  predictor.py  predictord.py  project_detector.py  redactor.py  safety.py  scoring.py  server.py  windows_ipc.py
docs/: ai.md  architecture.md  fish_integration.md  install.md  native_terminal.md  performance.md  powershell_integration.md  security.md  terminal_copilot_spec.md  windows_validation.md  zsh_integration.md
fish/: terminal-copilot.fish
native-terminal/: Cargo.toml  README.md
native-terminal/src/: lib.rs  main.rs
native-terminal/src/app/: mod.rs
native-terminal/src/session/: mod.rs  pty.rs
native-terminal/src/terminal/: cell.rs  cursor.rs  grid.rs  mod.rs  parser.rs  scrollback.rs  state.rs
powershell/: terminal-copilot.ps1
scripts/: install.sh  start_daemon.sh  uninstall.sh
tests/: test_ai_client.py  test_cache.py  test_context_detector.py  test_history_store.py  test_ipc.py  test_main.py  test_predictor.py  test_project_detector.py  test_redactor.py  test_safety.py  test_scoring.py  test_shell_adapters.py  test_windows_ipc.py
zsh/: terminal-copilot.zsh
