[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-copilot"
version = "0.1.0"
description = "Local-first inline shell command predictor for zsh/bash"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2",
  "PyYAML>=6",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
term-copilot = "daemon.main:main"
term-predictord = "daemon.predictord:main"

[tool.setuptools]
packages = ["daemon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
